=== librsvg 2.1.5 ===
	
2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Added rsvg-private.h

	* NEWS: 
	* configure.in:
	2.1.5

=== librsvg 2.1.4 ===
	
2003-01-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.1.4

2003-01-08 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Handle display and visibility styles to some extent
	* rsvg-text.c: Use above
	* rsvg-shapes.c: Ditto
	
2003-01-08 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c, rsvg-private.h, rsvg-shapes.c, rsvg-shapes.h, rsvg-styles.c, rsvg-styles.h, rsvg-text.c, rsvg-text.h : Separate functionality out into separate, managable files

2003-01-07 Dom Lachowicz <cinamod@hotmail.com>

	* test-rsvg.c : Unref pixbuf, free memory leak. Thanks valgrind.
	
=== librsvg 2.1.3 ===
	
2003-01-03 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (): Start handling text-decoration style
	
2003-01-02 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (*): Support font-style, font-variant, font-weight, 
	font-stretch, font-family, including the "inherit" option
	* rsvg-css.c (*): ditto, CSS functions for parsing time, frequency, 
	degrees/radians/grades	

	* NEWS: added above news items
	
=== librsvg 2.1.2 ===

2002-11-25  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Bump version to 2.1.2

2002-11-05  Alexander Larsson  <alexl@redhat.com>

	* rsvg.c (rsvg_text_handler_characters, make_valid_utf8):
	Don't crash if there is invalid utf8 in the file, or if
	encoding is not specified.

=== librsvg 2.1.1 ===

2002-10-22 Christian Schaller <Uraeus@linuxrising.org>
	
	* Disable building of example bubble SVG theme
	
2002-10-14  Alexander Larsson  <alexl@redhat.com>

	* gdk-pixbuf-loader/Makefile.am (INCLUDES): 
	* gdk-pixbuf-loader/io-svg.c:
	Fix includes with srcdir != builddir

	* NEWS:
	Add news items

2002-10-10  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_set_default_dpi): Rename function
	* test-rsvg.c: Support --dpi argument